name:                wbxml
version:             0.1.0.0
synopsis:            Printing and parsing of WAP Binary XML
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Enno Cramer
maintainer:          Enno Cramer <cramer@hornetsecurity.com>
copyright:           Copyright (c) 2015-2016 Hornetsecurity GmbH
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Wbxml.Types
                     , Data.Wbxml.Parser
                     , Data.Wbxml.Printer
                     , Data.Wbxml.DocumentType
                     , Data.Wbxml.Xml
  other-modules:       Data.Wbxml.Tokens
  build-depends:       base >= 4.7 && < 5
                     , transformers >= 0.4.2 && < 0.5
                     , bytestring >= 0.10.6 && < 0.11
                     , text >= 1.2.1 && < 1.3
                     , containers >= 0.5.6 && < 0.6
                     , bytestring-trie >= 0.2.4 && < 0.3
                     , xml-types >= 0.3.6 && < 0.4
                     , attoparsec >= 0.12.1 && < 0.13
  default-language:    Haskell2010
  ghc-options:         -Wall

executable wbxml
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , wbxml
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite test-wbxml
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.Types
                     , Test.Parser
                     , Test.Printer
                     , Test.RoundtripBinary
                     , Test.Xml
  build-depends:       base >= 4.7 && < 5
                     , transformers >= 0.4.2 && < 0.5
                     , bytestring >= 0.10.6 && < 0.11
                     , text >= 1.2.1 && < 1.3
                     , bytestring-trie >= 0.2.4 && < 0.3
                     , xml-types >= 0.3.6 && < 0.4
                     , attoparsec >= 0.12.1 && < 0.13
                     , tasty
                     , tasty-hunit
                     , tasty-smallcheck
                     , smallcheck
                     , wbxml
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite style-wbxml
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HLint.hs
  build-depends:       base >=4.7 && <5
                     , hlint ==1.*
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
